# COVID-19-Detection

./: .gitignore  LICENSE  README.md  main.py  network.py  preprocessing.py  pyproject.toml  requirements.txt  transformer.ipynb
.github/workflows/: ci.yml
src/: config.yaml  dataset.py  evaluate.py  model.py  predict.py  prep_data.py  train.py
test/: test_shapes.py
